force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/WOO_WMF_Orders__c.object-meta.xml
<CustomObject>
    <description>Object for the orders</description>
    <label>CCC order</label>
    <pluralLabel>CCC orders</pluralLabel>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>