force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/Main_Order__c.field-meta.xml
<CustomField>
    <fullName>Main_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A complaint from a customer can lead to the creation of a Main Order with several related Subsidiary Orders</description>
    <label>Main Order</label>
    <referenceTo>WOO_WMF_Orders__c</referenceTo>
    <relationshipLabel>Subsidiary CCC orders</relationshipLabel>
    <relationshipName>Subsidiary_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>