force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/Product_Country__c.field-meta.xml
<CustomField>
    <fullName>Product_Country__c</fullName>
    <description>Copy of the field WOO_Case__r.Product_Country__c.
Used as the controlling value for WOO_Retailer__c which is itself a copy or WOO_Case__r.Retailer__c.
Details of the synchronization are in the triggers.
Also used for the look-up filter on WOO_Product__c</description>
    <label>Retailer Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>