force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Account__c.field-meta.xml
<CustomField>
    <fullName>WOO_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WMF Order</relationshipLabel>
    <relationshipName>WMF_Order</relationshipName>
    <type>Lookup</type>
</CustomField>