force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Account_Address__c.field-meta.xml
<CustomField>
    <fullName>WOO_Account_Address__c</fullName>
    <formula>WOO_Account_Street__c + &apos; &apos; + WOO_Account_Postal_Code__c + &apos; &apos; + WOO_Account_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>