force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Account_City__c.field-meta.xml
<CustomField>
    <fullName>WOO_Account_City__c</fullName>
    <label>Account City</label>
    <length>35</length>
    <type>Text</type>
</CustomField>