force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Account_FirstName__c.field-meta.xml
<CustomField>
    <fullName>WOO_Account_FirstName__c</fullName>
    <formula>WOO_Account__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firstname</label>
    <type>Text</type>
</CustomField>