force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Account_LastName__c.field-meta.xml
<CustomField>
    <fullName>WOO_Account_LastName__c</fullName>
    <formula>WOO_Account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lastname</label>
    <type>Text</type>
</CustomField>