force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Account_Mobile__c.field-meta.xml
<CustomField>
    <fullName>WOO_Account_Mobile__c</fullName>
    <formula>WOO_Account__r.PersonMobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>