force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Account_PersonEmail__c.field-meta.xml
<CustomField>
    <fullName>WOO_Account_PersonEmail__c</fullName>
    <formula>WOO_Account__r.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>