force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Account_Phone2__c.field-meta.xml
<CustomField>
    <fullName>WOO_Account_Phone2__c</fullName>
    <formula>WOO_Account__r.PersonOtherPhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Phone</label>
    <type>Text</type>
</CustomField>