force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Account_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>WOO_Account_Postal_Code__c</fullName>
    <label>Account Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>