force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Account_Salutation__c.field-meta.xml
<CustomField>
    <fullName>WOO_Account_Salutation__c</fullName>
    <formula>IF(!ISNULL(TEXT(WOO_Account__r.Salutation)), TEXT(WOO_Account__r.Salutation), TEXT(WOO_Account__r.Title_2__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>