force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Account_Street__c.field-meta.xml
<CustomField>
    <fullName>WOO_Account_Street__c</fullName>
    <label>Account Street</label>
    <length>35</length>
    <type>Text</type>
</CustomField>