force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Agora_Order_Ref__c.field-meta.xml
<CustomField>
    <fullName>WOO_Agora_Order_Ref__c</fullName>
    <label>Agora Order Number</label>
    <length>220</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>