force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Agora_ProductRefCom__c.field-meta.xml
<CustomField>
    <fullName>WOO_Agora_ProductRefCom__c</fullName>
    <description>When an order is sent this field is used to store which Commercial Reference has been picked for the order.</description>
    <label>Retailer Zip Code</label>
    <length>220</length>
    <type>Text</type>
</CustomField>