force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Agora_Retailer_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>WOO_Agora_Retailer_Zipcode__c</fullName>
    <label>Retailer Zip Code</label>
    <length>220</length>
    <type>Text</type>
</CustomField>