force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Agora_Submission_Datetime__c.field-meta.xml
<CustomField>
    <fullName>WOO_Agora_Submission_Datetime__c</fullName>
    <defaultValue></defaultValue>
    <label>Submission Date</label>
    <type>DateTime</type>
</CustomField>