force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Agora_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>WOO_Agora_Symptoms__c</fullName>
    <label>IRIS code designation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>WOO_Order_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MissingOrRecipeBookDefect</fullName>
                <label>Missing / Any defect related to the recipe book</label>
            </value>
            <value>
                <fullName>DefectNotOnConsumer</fullName>
                <label>Defect which it is certain that the origin is not due to the consumer</label>
            </value>
            <value>
                <fullName>CommercialAction</fullName>
                <label>Commercial action (Parts brocken by the conso…)</label>
            </value>
            <value>
                <fullName>GoodwillGesture</fullName>
                <label>goodwill gesture</label>
            </value>
            <value>
                <fullName>DefectiveProduct</fullName>
                <label>Defective product</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>