force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Agora_TechJsonState__c.field-meta.xml
<CustomField>
    <fullName>WOO_Agora_TechJsonState__c</fullName>
    <label>(Tech)Agora JSON state</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>