force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_AgoraManufacturingDate__c.field-meta.xml
<CustomField>
    <fullName>WOO_AgoraManufacturingDate__c</fullName>
    <label>Manufacturing Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>