force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Case__c.field-meta.xml
<CustomField>
    <fullName>WOO_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>CCC orders</relationshipLabel>
    <relationshipName>WMF_Order</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>