force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Commercial_organization__c.field-meta.xml
<CustomField>
    <fullName>WOO_Commercial_organization__c</fullName>
    <label>Commercial organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>K101</fullName>
                <default>true</default>
                <label>K101</label>
            </value>
            <value>
                <fullName>K109</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>