force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_CPD_client_code__c.field-meta.xml
<CustomField>
    <fullName>WOO_CPD_client_code__c</fullName>
    <label>CPD client code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>WOO_Commercial_organization__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>98001019</fullName>
                <default>true</default>
                <label>CKW End user Germany K101</label>
            </value>
            <value>
                <fullName>98001020</fullName>
                <label>CKW End user Austria K101</label>
            </value>
            <value>
                <fullName>98001103</fullName>
                <label>SDA End user Germany K101</label>
            </value>
            <value>
                <fullName>98001120</fullName>
                <label>SDA End user Austria K101</label>
            </value>
            <value>
                <fullName>98001102</fullName>
                <label>SDA Traders Germany K101</label>
            </value>
            <value>
                <fullName>98001030</fullName>
                <label>CKW End user inside Europe K109</label>
            </value>
            <value>
                <fullName>98001111</fullName>
                <label>SDA End user inside Europe K109</label>
            </value>
            <value>
                <fullName>98001113</fullName>
                <label>SDA Traders inside Europe K109</label>
            </value>
            <value>
                <fullName>98001021</fullName>
                <isActive>false</isActive>
                <label>98001021</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>