force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>WOO_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>220</length>
    <type>Text</type>
</CustomField>