force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_External_Id__c.field-meta.xml
<CustomField>
    <fullName>WOO_External_Id__c</fullName>
    <description>For unit tests</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>