force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Is_File_Created__c.field-meta.xml
<CustomField>
    <fullName>WOO_Is_File_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to check if the file has been created in azure storage</description>
    <label>Is File Created</label>
    <type>Checkbox</type>
</CustomField>