force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Order_Previous_Errors__c.field-meta.xml
<CustomField>
    <fullName>WOO_Order_Previous_Errors__c</fullName>
    <description>JSON Used for main free orders</description>
    <label>WOO_Order_Previous_Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>