force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>WOO_Order_Type__c</fullName>
    <defaultValue>&apos;Finished products&apos;</defaultValue>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finished products</fullName>
            </value>
            <value>
                <fullName>Spare part</fullName>
            </value>
            <value>
                <fullName>FOC</fullName>
                <label>Spare part and accessories (Free Of Charge)</label>
            </value>
            <value>
                <fullName>FEX</fullName>
                <label>Finish product (Free Exchange)</label>
            </value>
            <value>
                <fullName>Goodwill</fullName>
                <label>Other free order type (goodwill)</label>
            </value>
            <value>
                <fullName>Goodwill_SpareParts</fullName>
                <label>Other free order type (goodwill : Spare Parts)</label>
            </value>
            <value>
                <fullName>Goodwill_Product</fullName>
                <label>Other free order type (goodwill : Product)</label>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>