force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Product__c.field-meta.xml
<CustomField>
    <fullName>WOO_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for RecordType FreeOrders</description>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Product2.Country__c</field>
            <operation>equals</operation>
            <valueField>$Source.Product_Country__c</valueField>
        </filterItems>
        <filterItems>
            <field>$User.Bypass_Lookup_Filter__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>