force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Requested_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>WOO_Requested_delivery_date__c</fullName>
    <label>Requested delivery date</label>
    <type>Date</type>
</CustomField>