force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Requested_delivery_date_sap_format__c.field-meta.xml
<CustomField>
    <fullName>WOO_Requested_delivery_date_sap_format__c</fullName>
    <formula>TEXT(YEAR(WOO_Requested_delivery_date__c)) &amp; 
IF(AND(MONTH(WOO_Requested_delivery_date__c)&gt;0,MONTH(WOO_Requested_delivery_date__c)&lt;9),TEXT(0)&amp;TEXT(MONTH(WOO_Requested_delivery_date__c)),TEXT(MONTH(WOO_Requested_delivery_date__c))) &amp; 
IF(AND(DAY(WOO_Requested_delivery_date__c)&gt;0,DAY(WOO_Requested_delivery_date__c)&lt;9),TEXT(0)&amp;TEXT(DAY(WOO_Requested_delivery_date__c)),TEXT(DAY(WOO_Requested_delivery_date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested delivery date sap format</label>
    <type>Text</type>
</CustomField>