force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Retailer__c.field-meta.xml
<CustomField>
    <fullName>WOO_Retailer__c</fullName>
    <description>Copy of the field WOO_Case__r.Retailer__c.
Details of the synchronization are in the triggers.</description>
            <label>Retailer</label>
            <type>Picklist</type>
            <valueSet>
                <controllingField>Product_Country__c</controllingField>
                <restricted>true</restricted>
                <valueSetName>Retailer</valueSetName>
            </valueSet>
        </CustomField>