force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_SAP_status__c.field-meta.xml
<CustomField>
    <fullName>WOO_SAP_status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Simulated OK</fullName>
            </value>
            <value>
                <fullName>Simulated with errors</fullName>
            </value>
            <value>
                <fullName>Ready to be sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>NotSent</fullName>
                <default>true</default>
                <label>Not Sent</label>
            </value>
            <value>
                <fullName>SentWithErrors</fullName>
                <label>Sent(Has Errors)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>