force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Shipment_number__c.field-meta.xml
<CustomField>
    <fullName>WOO_Shipment_number__c</fullName>
    <label>Shipment number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>