force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>WOO_Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>WOO_WMF_Order_Line_Item__c.WOO_Total_Price__c</summarizedField>
    <summaryForeignKey>WOO_WMF_Order_Line_Item__c.WOO_WMF_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>