force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/fields/WOO_WMF_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>WOO_WMF_Order_Number__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>