force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/recordTypes/Free_Orders.recordType-meta.xml
<RecordType>
    <fullName>Free_Orders</fullName>
    <active>true</active>
    <label>Free Orders</label>
</RecordType>