force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/recordTypes/Free_Orders_Subsidiary.recordType-meta.xml
<RecordType>
    <fullName>Free_Orders_Subsidiary</fullName>
    <active>true</active>
    <label>Free Orders(Subsidiary)</label>
</RecordType>