force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/recordTypes/SAP_Orders.recordType-meta.xml
<RecordType>
    <fullName>SAP_Orders</fullName>
    <active>true</active>
    <label>Billable orders</label>
</RecordType>