force-app/wow/wmf_order/objects/WOO_WMF_Orders__c/validationRules/Type_required_and_not_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_required_and_not_editable</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT($User.Bypass_Validation_Rules__c),
    RecordType.DeveloperName = &apos;SAP_Orders&apos;,
    OR(
        ISBLANK(TEXT(WOO_Order_Type__c)),
        ISCHANGED(WOO_Order_Type__c)
				)
)</errorConditionFormula>
    <errorMessage>The Order Type is mandatory and not editable after creation</errorMessage>
</ValidationRule>